# Manga

./: io.github.chaotic-dev.manga.json  meson.build
data/: io.github.chaotic-dev.manga.appdata.xml.in  io.github.chaotic-dev.manga.desktop.in  io.github.chaotic-dev.manga.gschema.xml  io.github.chaoticdev.manga.appdata.xml.in  io.github.chaoticdev.manga.desktop.in  io.github.chaoticdev.manga.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: chapter_listing.vala  main.vala  manga.gresource.xml  manga_listing.ui  manga_listing.vala  meson.build  window.ui  window.vala
src/mangadex/: chapter.vala  manga.vala  tag.vala
src/mangadex/api/: api.vala
src/ui/: chapter_listing.ui  window.ui
src/util/: cache.vala  unescape_html.vala
